--- a/css/main.css
+++ b/css/main.css
@@ -386,7 +386,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "____","Arial",sans-serif;
+  font-family: "Louis","Arial",sans-serif;
   background-color: #F9F9F9;
   overflow-x: hidden;
 }
@@ -1067,6 +1067,286 @@ img {
      object-fit: cover;
   width: 100%;
   height: 630px;
+}
+
+.info__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.info__item {
+  width: 30%;
+  border: 1px solid #ccc;
+  margin: 22px 0;
+}
+
+.model-item__img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.info-item__bottom-box {
+  padding: 10px;
+  min-height: 175px;
+}
+
+.info-item__title {
+  margin: 0;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 31px;
+  color: #000;
+}
+
+.info-item__text {
+  margin: 0;
+  padding: 10px 20px 30px 20px;
+  font-size: 16px;
+  line-height: 26px;
+  color: #000;
+}
+
+.app__box {
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 120px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.app__left {
+  width: 42%;
+}
+
+.app__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 54px;
+  color: #000;
+}
+
+.app__text {
+  margin: 45px 0 30px 0;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000;
+}
+
+.app__link-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.app__link {
+  text-decoration: none !important;
+  width: 210px;
+  height: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 15px;
+  padding: 12px 15px 12px 65px;
+  background-color: #EEB333;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  color: #000000;
+  background-image: url("../../img/icon-play-market.svg");
+  background-repeat: no-repeat;
+  background-position: center left 15px;
+  background-size: 40px;
+}
+
+.app__link span {
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.app__app-store {
+  background-image: url("../../img/icon-app-store.svg");
+  background-size: 33px;
+}
+
+.app__right {
+  width: 55%;
+}
+
+.app__img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.footer {
+  background-color: #f2f2f2;
+}
+
+.footer__top {
+  padding: 70px 0 30px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.footer__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__list-box {
+  width: 23%;
+}
+
+.footer__title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 31px;
+  color: #000000;
+}
+
+.footer__list {
+  list-style: none;
+  margin: 30px 0 0 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.footer__item {
+  margin: 8px 0;
+}
+
+.footer__link {
+  text-decoration: none !important;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000;
+}
+
+.footer-link__box {
+  width: 220px;
+  margin-left: auto;
+}
+
+.footer-link__title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 31px;
+  text-align: right;
+  color: #000;
+}
+
+.footer-web__link-box {
+  width: 190px;
+  margin-top: 10px;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-web__link {
+  width: 50px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #E6E6E6;
+  border-radius: 50%;
+}
+
+.footer-web__link svg {
+  width: 23px;
+  height: 23px;
+}
+
+.footer__bottom {
+  padding: 33px 0 50px 0;
+}
+
+.footer__bottom .footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__bottom-title {
+  height: 25px;
+  margin: 0;
+  font-weight: 800;
+  font-size: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__bottom-title span {
+  margin-top: 10px;
+  margin-left: 3px;
+  font-weight: 500;
+  font-size: 6px;
 }
 
 :root {
