added modal in header-modal

--- a/css/main.css
+++ b/css/main.css
@@ -506,7 +506,7 @@ img {
   width: 350px;
   height: 43px;
   display: block;
-  border: 1px solid #999999;
+  border: 1px solid #999;
   border-right: none;
   outline: none;
 }
@@ -522,7 +522,25 @@ img {
   background-size: 18px;
 }
 
-.nav__language {
+.nav__search-btn:hover {
+  background-color: #EEB333;
+}
+
+.nav__language-box {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__language-checked {
   padding: 10px 22px;
   background: #F2F2F2;
   border: 1px solid #EEB333;
@@ -537,7 +555,8 @@ img {
           justify-content: center;
 }
 
-.nav__language span {
+.nav__language-checked .nav__language {
+  text-decoration: none !important;
   font-weight: 500;
   font-size: 18px;
   line-height: 21px;
@@ -550,7 +569,7 @@ img {
           align-items: center;
 }
 
-.nav__language span::after {
+.nav__language-checked .nav__language::after {
   content: '';
   width: 10px;
   height: 5px;
@@ -561,8 +580,48 @@ img {
   background-size: contain;
 }
 
-.nav__language:hover {
+.nav__language-checked:hover {
   background-color: #EEB333;
+}
+
+.nav__language-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__language-dropdown .nav__language {
+  text-decoration: none !important;
+  width: 100%;
+  height: auto;
+  display: block;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  background-color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.nav__language-dropdown .nav__language:first-child {
+  border-bottom: 1px solid #EEB333;
+}
+
+.nav__language-dropdown .nav__language:hover {
+  background-color: #F8E1AD;
 }
 
 .header-modal {
@@ -571,7 +630,7 @@ img {
   left: 0;
   right: 0;
   top: 100%;
-  min-height: 500px;
+  min-height: 250px;
   background-color: #fff;
 }
 
@@ -674,6 +733,137 @@ img {
 .header-modal .model-slider__right-btn {
   background-image: url("../../img/arrow-right.svg");
   right: 45px;
+}
+
+.header-modal .customer-modal, .header-modal .owner-modal {
+  padding: 60px 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-modal .chevrolet-modal {
+  padding: 60px 100px;
+}
+
+.header-modal .customer-modal__left, .header-modal .customer-modal__right, .header-modal .owner-modal__left, .header-modal .owner-modal__right {
+  width: 48%;
+}
+
+.header-modal .customer-modal__list, .header-modal .owner-modal__list, .header-modal .chevrolet-modal__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.header-modal .customer-modal__item, .header-modal .owner-modal__item {
+  width: 47%;
+  margin: 20px 0;
+}
+
+.header-modal .chevrolet-modal__item {
+  width: 24%;
+}
+
+.header-modal .customer-modal__link, .header-modal .owner-modal__link, .header-modal .chevrolet-modal__link {
+  text-decoration: none !important;
+  width: 100%;
+  height: 125px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 2px solid #EEB333;
+  -webkit-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
+
+.header-modal .customer-modal__link svg, .header-modal .owner-modal__link svg, .header-modal .chevrolet-modal__link svg {
+  width: 40px;
+  height: 40px;
+  fill: #999;
+}
+
+.header-modal .customer-modal__link p, .header-modal .owner-modal__link p, .header-modal .chevrolet-modal__link p {
+  color: #333333;
+}
+
+.header-modal .customer-modal__link:hover, .header-modal .owner-modal__link:hover, .header-modal .chevrolet-modal__link:hover {
+  background-color: #EEB333;
+}
+
+.header-modal .customer-modal__link:hover svg, .header-modal .owner-modal__link:hover svg, .header-modal .chevrolet-modal__link:hover svg {
+  fill: #000;
+}
+
+.header-modal .customer-modal__link:hover svg path, .header-modal .owner-modal__link:hover svg path, .header-modal .chevrolet-modal__link:hover svg path {
+  fill: #000;
+}
+
+.header-modal .customer-modal__link:hover p, .header-modal .owner-modal__link:hover p, .header-modal .chevrolet-modal__link:hover p {
+  color: #000;
+}
+
+.header-modal .customer-modal__title, .header-modal .owner-modal__title {
+  margin: 20px 0;
+  font-size: 30px;
+  line-height: 34px;
+  color: #000;
+}
+
+.header-modal .customer-modal__more-list, .header-modal .owner-modal__more-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.header-modal .customer-modal__more-item, .header-modal .owner-modal__more-item {
+  width: 48%;
+  margin: 20px 0;
+}
+
+.header-modal .customer-modal__more-link, .header-modal .owner-modal__more-link {
+  text-decoration: none !important;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000;
 }
 
 .main-bg__box {
@@ -855,6 +1045,15 @@ img {
 .link-cars__link .link-cars__img-box img {
   width: 120px;
   height: 120px;
+  opacity: 0.5;
+}
+
+.link-cars__link .link-cars__img-box:hover {
+  border: 2px solid #777;
+}
+
+.link-cars__link .link-cars__img-box:hover img {
+  opacity: 0.77;
 }
 
 .link-cars__link span {
