--- a/scss/blocks/_header-modal.scss
+++ b/scss/blocks/_header-modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   top: 100%;
-  min-height: 500px;
+  min-height: 250px;
   background-color: #fff;
 
   .model-modal__list-btn {
@@ -95,5 +95,108 @@
   .model-slider__right-btn {
     background-image: url('../../img/arrow-right.svg');
     right: 45px;
+  }
+
+
+
+  .customer-modal, .owner-modal {
+    padding: 60px 100px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .chevrolet-modal {
+    padding: 60px 100px;
+  }
+
+  .customer-modal__left, .customer-modal__right, .owner-modal__left, .owner-modal__right {
+    width: 48%;
+  }
+
+  .customer-modal__list, .owner-modal__list, .chevrolet-modal__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .customer-modal__item, .owner-modal__item {
+    width: 47%;
+    margin: 20px 0;
+  }
+
+  .chevrolet-modal__item {
+    width: 24%;
+  }
+
+  .customer-modal__link, .owner-modal__link, .chevrolet-modal__link {
+    text-decoration: none !important;
+    width: 100%;
+    height: 125px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: 2px solid #EEB333;
+    transition: 0.2s ease all;
+
+    svg {
+      width: 40px;
+      height: 40px;
+      fill: #999;
+    }
+
+    p {
+      color: #333333;
+    }
+
+    &:hover {
+      background-color: #EEB333;
+
+      svg {
+        fill: #000;
+
+        path {
+          fill: #000;
+        }
+      }
+
+      p {
+        color: #000;
+      }
+    }
+  }
+
+  .customer-modal__title, .owner-modal__title {
+    margin: 20px 0;
+    font-size: 30px;
+    line-height: 34px;
+    color: #000;
+  }
+
+  .customer-modal__more-list, .owner-modal__more-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .customer-modal__more-item, .owner-modal__more-item {
+    width: 48%;
+    margin: 20px 0;
+  }
+
+  .customer-modal__more-link, .owner-modal__more-link {
+    text-decoration: none !important;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
   }
 }
