--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -70,7 +70,7 @@
   width: 350px;
   height: 43px;
   display: block;
-  border: 1px solid #999999;
+  border: 1px solid #999;
   border-right: none;
   outline: none;
 }
@@ -84,9 +84,20 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 18px;
+
+  &:hover {
+    background-color: #EEB333;
+  }
 }
 
-.nav__language {
+.nav__language-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav__language-checked {
   padding: 10px 22px;
   background: #F2F2F2;
   border: 1px solid #EEB333;
@@ -94,7 +105,8 @@
   align-items: center;
   justify-content: center;
 
-  span {
+  .nav__language {
+    text-decoration: none !important;
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
@@ -116,5 +128,38 @@
 
   &:hover {
     background-color: #EEB333;
+  }
+}
+
+.nav__language-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .nav__language {
+    text-decoration: none !important;
+    width: 100%;
+    height: auto;
+    display: block;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    background-color: #fff;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.6);
+
+    &:first-child {
+      border-bottom: 1px solid #EEB333;
+    }
+
+    &:hover {
+      background-color: #F8E1AD;
+    }
   }
 }
